fix(tester front): fix message emited by forntend.

--- a/public/index.html
+++ b/public/index.html
@@ -49,8 +49,8 @@
           name: messageName,
           content,
         }
-
-        socket.emit( message.name, message )
+        console.log( 'FRONT MESSAGE NAME >>>>>>>>> ', messageName )
+        return messageName === 'test' ? socket.emit( message.name, message ) : socket.emit( message.name, message.content )
       }
     } )
   </script>
